<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <Button
    android:id="@+id/btConfirm"
    android:layout_width="0dp"
    android:layout_height="51dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:background="#D81B60"
    android:backgroundTint="#D81B60"
    android:text="@string/confirm"
    android:textColor="#FFFFFF"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayout2"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="64dp"
    app:layout_constraintBottom_toTopOf="@+id/btConfirm"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/etProfileDescription"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/Description" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="32dp"
    app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/etLastName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/last_name" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayout3"
    android:layout_width="0dp"
    android:layout_height="45dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="32dp"
    app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/etFirstName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/FristName" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/btOpenPic"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:layout_marginBottom="32dp"
    android:background="#D81B60"
    android:padding="10dp"
    android:text="@string/open_picture_gallery"
    android:textColor="#FFFFFF"
    app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent" />

  <ImageView
    android:id="@+id/ivProfilePic"
    android:layout_width="277dp"
    android:layout_height="154dp"
    android:layout_marginTop="32dp"
    android:layout_marginBottom="32dp"
    android:contentDescription="@string/profilepic"
    app:layout_constraintBottom_toTopOf="@+id/btOpenPic"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/ic_account_box_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
